backend/CompiledFiles/java2pyParser.py
# Generated from /Users/blake/Documents/ppl/JavaPy-Translator/backend/grammars/java2py.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class java2pyParser ( Parser ):

    grammarFileName = "java2py.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "'='", "';'", 
                     "'++'", "'--'", "'+='", "'-='", "'.'", "'&&'", "'||'", 
                     "'>'", "'<'", "'=='", "'!='", "'<='", "'>='", "'+'", 
                     "'-'", "'*'", "'/'", "'!'", "','", "'['", "']'", "'public'", 
                     "'class'", "'static'", "'void'", "'int'", "'double'", 
                     "'boolean'", "'String'", "'if'", "'else'", "':'", "'break'", 
                     "'while'", "'for'", "'return'", "'System'", "'out'", 
                     "'println'", "'true'", "'false'", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "PUBLIC", "CLASS", "STATIC", "VOID", "INT", "DOUBLE", 
                      "BOOLEAN", "STRING", "IF", "ELSE", "COLON", "BREAK", 
                      "WHILE", "FOR", "RETURN", "SYSTEM", "OUT", "PRINTLN", 
                      "TRUE", "FALSE", "NULL", "STRING_LITERAL", "ID", "NUMBER", 
                      "FLOAT", "NL", "WS" ]

    RULE_program = 0
    RULE_classDef = 1
    RULE_classBody = 2
    RULE_methodDef = 3
    RULE_stmt = 4
    RULE_whileStmt = 5
    RULE_forStmt = 6
    RULE_asg = 7
    RULE_ifStmt = 8
    RULE_elifStmt = 9
    RULE_elseStmt = 10
    RULE_funcStmt = 11
    RULE_breakStmt = 12
    RULE_postfixStmt = 13
    RULE_returnStmt = 14
    RULE_printStmt = 15
    RULE_block = 16
    RULE_callStmt = 17
    RULE_exp = 18
    RULE_logicExp = 19
    RULE_compExp = 20
    RULE_addExp = 21
    RULE_mulExp = 22
    RULE_unaryExp = 23
    RULE_atom = 24
    RULE_postfix = 25
    RULE_printArgs = 26
    RULE_param = 27
    RULE_javaType = 28

    ruleNames =  [ "program", "classDef", "classBody", "methodDef", "stmt", 
                   "whileStmt", "forStmt", "asg", "ifStmt", "elifStmt", 
                   "elseStmt", "funcStmt", "breakStmt", "postfixStmt", "returnStmt", 
                   "printStmt", "block", "callStmt", "exp", "logicExp", 
                   "compExp", "addExp", "mulExp", "unaryExp", "atom", "postfix", 
                   "printArgs", "param", "javaType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    PUBLIC=28
    CLASS=29
    STATIC=30
    VOID=31
    INT=32
    DOUBLE=33
    BOOLEAN=34
    STRING=35
    IF=36
    ELSE=37
    COLON=38
    BREAK=39
    WHILE=40
    FOR=41
    RETURN=42
    SYSTEM=43
    OUT=44
    PRINTLN=45
    TRUE=46
    FALSE=47
    NULL=48
    STRING_LITERAL=49
    ID=50
    NUMBER=51
    FLOAT=52
    NL=53
    WS=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDef(self):
            return self.getTypedRuleContext(java2pyParser.ClassDefContext,0)


        def EOF(self):
            return self.getToken(java2pyParser.EOF, 0)

        def getRuleIndex(self):
            return java2pyParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = java2pyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.classDef()
            self.state = 59
            self.match(java2pyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(java2pyParser.PUBLIC, 0)

        def CLASS(self):
            return self.getToken(java2pyParser.CLASS, 0)

        def ID(self):
            return self.getToken(java2pyParser.ID, 0)

        def classBody(self):
            return self.getTypedRuleContext(java2pyParser.ClassBodyContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_classDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDef" ):
                return visitor.visitClassDef(self)
            else:
                return visitor.visitChildren(self)




    def classDef(self):

        localctx = java2pyParser.ClassDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(java2pyParser.PUBLIC)
            self.state = 62
            self.match(java2pyParser.CLASS)
            self.state = 63
            self.match(java2pyParser.ID)
            self.state = 64
            self.match(java2pyParser.T__0)
            self.state = 65
            self.classBody()
            self.state = 66
            self.match(java2pyParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDef(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java2pyParser.MethodDefContext)
            else:
                return self.getTypedRuleContext(java2pyParser.MethodDefContext,i)


        def getRuleIndex(self):
            return java2pyParser.RULE_classBody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = java2pyParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==java2pyParser.PUBLIC:
                self.state = 68
                self.methodDef()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(java2pyParser.PUBLIC, 0)

        def STATIC(self):
            return self.getToken(java2pyParser.STATIC, 0)

        def javaType(self):
            return self.getTypedRuleContext(java2pyParser.JavaTypeContext,0)


        def ID(self):
            return self.getToken(java2pyParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(java2pyParser.BlockContext,0)


        def param(self):
            return self.getTypedRuleContext(java2pyParser.ParamContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_methodDef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDef" ):
                return visitor.visitMethodDef(self)
            else:
                return visitor.visitChildren(self)




    def methodDef(self):

        localctx = java2pyParser.MethodDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_methodDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(java2pyParser.PUBLIC)
            self.state = 75
            self.match(java2pyParser.STATIC)
            self.state = 76
            self.javaType()
            self.state = 77
            self.match(java2pyParser.ID)
            self.state = 78
            self.match(java2pyParser.T__2)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << java2pyParser.VOID) | (1 << java2pyParser.INT) | (1 << java2pyParser.DOUBLE) | (1 << java2pyParser.BOOLEAN) | (1 << java2pyParser.STRING))) != 0):
                self.state = 79
                self.param()


            self.state = 82
            self.match(java2pyParser.T__3)
            self.state = 83
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def whileStmt(self):
            return self.getTypedRuleContext(java2pyParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(java2pyParser.ForStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(java2pyParser.IfStmtContext,0)


        def funcStmt(self):
            return self.getTypedRuleContext(java2pyParser.FuncStmtContext,0)


        def asg(self):
            return self.getTypedRuleContext(java2pyParser.AsgContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(java2pyParser.BreakStmtContext,0)


        def postfixStmt(self):
            return self.getTypedRuleContext(java2pyParser.PostfixStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(java2pyParser.ReturnStmtContext,0)


        def printStmt(self):
            return self.getTypedRuleContext(java2pyParser.PrintStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(java2pyParser.CallStmtContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = java2pyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 85
                self.whileStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.forStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 87
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 88
                self.funcStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.asg()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 90
                self.breakStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 91
                self.postfixStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 92
                self.returnStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 93
                self.printStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 94
                self.callStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(java2pyParser.WHILE, 0)

        def exp(self):
            return self.getTypedRuleContext(java2pyParser.ExpContext,0)


        def block(self):
            return self.getTypedRuleContext(java2pyParser.BlockContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = java2pyParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(java2pyParser.WHILE)
            self.state = 98
            self.match(java2pyParser.T__2)
            self.state = 99
            self.exp()
            self.state = 100
            self.match(java2pyParser.T__3)
            self.state = 101
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(java2pyParser.FOR, 0)

        def javaType(self):
            return self.getTypedRuleContext(java2pyParser.JavaTypeContext,0)


        def ID(self):
            return self.getToken(java2pyParser.ID, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java2pyParser.ExpContext)
            else:
                return self.getTypedRuleContext(java2pyParser.ExpContext,i)


        def postfixStmt(self):
            return self.getTypedRuleContext(java2pyParser.PostfixStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(java2pyParser.BlockContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_forStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)




    def forStmt(self):

        localctx = java2pyParser.ForStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_forStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(java2pyParser.FOR)
            self.state = 104
            self.match(java2pyParser.T__2)
            self.state = 105
            self.javaType()
            self.state = 106
            self.match(java2pyParser.ID)
            self.state = 107
            self.match(java2pyParser.T__4)
            self.state = 108
            self.exp()
            self.state = 109
            self.match(java2pyParser.T__5)
            self.state = 110
            self.exp()
            self.state = 111
            self.match(java2pyParser.T__5)
            self.state = 112
            self.postfixStmt()
            self.state = 113
            self.match(java2pyParser.T__3)
            self.state = 114
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(java2pyParser.ID, 0)

        def exp(self):
            return self.getTypedRuleContext(java2pyParser.ExpContext,0)


        def javaType(self):
            return self.getTypedRuleContext(java2pyParser.JavaTypeContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_asg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsg" ):
                return visitor.visitAsg(self)
            else:
                return visitor.visitChildren(self)




    def asg(self):

        localctx = java2pyParser.AsgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_asg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << java2pyParser.VOID) | (1 << java2pyParser.INT) | (1 << java2pyParser.DOUBLE) | (1 << java2pyParser.BOOLEAN) | (1 << java2pyParser.STRING))) != 0):
                self.state = 116
                self.javaType()


            self.state = 119
            self.match(java2pyParser.ID)
            self.state = 120
            self.match(java2pyParser.T__4)
            self.state = 121
            self.exp()
            self.state = 122
            self.match(java2pyParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(java2pyParser.IF, 0)

        def exp(self):
            return self.getTypedRuleContext(java2pyParser.ExpContext,0)


        def block(self):
            return self.getTypedRuleContext(java2pyParser.BlockContext,0)


        def elifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(java2pyParser.ElifStmtContext)
            else:
                return self.getTypedRuleContext(java2pyParser.ElifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(java2pyParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = java2pyParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(java2pyParser.IF)
            self.state = 125
            self.match(java2pyParser.T__2)
            self.state = 126
            self.exp()
            self.state = 127
            self.match(java2pyParser.T__3)
            self.state = 128
            self.block()
            self.state = 132
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 129
                    self.elifStmt() 
                self.state = 134
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==java2pyParser.ELSE:
                self.state = 135
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(java2pyParser.ELSE, 0)

        def IF(self):
            return self.getToken(java2pyParser.IF, 0)

        def exp(self):
            return self.getTypedRuleContext(java2pyParser.ExpContext,0)


        def block(self):
            return self.getTypedRuleContext(java2pyParser.BlockContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_elifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElifStmt" ):
                return visitor.visitElifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elifStmt(self):

        localctx = java2pyParser.ElifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_elifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(java2pyParser.ELSE)
            self.state = 139
            self.match(java2pyParser.IF)
            self.state = 140
            self.match(java2pyParser.T__2)
            self.state = 141
            self.exp()
            self.state = 142
            self.match(java2pyParser.T__3)
            self.state = 143
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(java2pyParser.ELSE, 0)

        def block(self):
            return self.getTypedRuleContext(java2pyParser.BlockContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_elseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStmt" ):
                return visitor.visitElseStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseStmt(self):

        localctx = java2pyParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_elseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(java2pyParser.ELSE)
            self.state = 146
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PUBLIC(self):
            return self.getToken(java2pyParser.PUBLIC, 0)

        def STATIC(self):
            return self.getToken(java2pyParser.STATIC, 0)

        def javaType(self):
            return self.getTypedRuleContext(java2pyParser.JavaTypeContext,0)


        def ID(self):
            return self.getToken(java2pyParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(java2pyParser.BlockContext,0)


        def param(self):
            return self.getTypedRuleContext(java2pyParser.ParamContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_funcStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncStmt" ):
                return visitor.visitFuncStmt(self)
            else:
                return visitor.visitChildren(self)




    def funcStmt(self):

        localctx = java2pyParser.FuncStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(java2pyParser.PUBLIC)
            self.state = 149
            self.match(java2pyParser.STATIC)
            self.state = 150
            self.javaType()
            self.state = 151
            self.match(java2pyParser.ID)
            self.state = 152
            self.match(java2pyParser.T__2)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << java2pyParser.VOID) | (1 << java2pyParser.INT) | (1 << java2pyParser.DOUBLE) | (1 << java2pyParser.BOOLEAN) | (1 << java2pyParser.STRING))) != 0):
                self.state = 153
                self.param()


            self.state = 156
            self.match(java2pyParser.T__3)
            self.state = 157
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(java2pyParser.BREAK, 0)

        def getRuleIndex(self):
            return java2pyParser.RULE_breakStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)




    def breakStmt(self):

        localctx = java2pyParser.BreakStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_breakStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(java2pyParser.BREAK)
            self.state = 160
            self.match(java2pyParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PostfixStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token

        def ID(self):
            return self.getToken(java2pyParser.ID, 0)

        def exp(self):
            return self.getTypedRuleContext(java2pyParser.ExpContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_postfixStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixStmt" ):
                return visitor.visitPostfixStmt(self)
            else:
                return visitor.visitChildren(self)




    def postfixStmt(self):

        localctx = java2pyParser.PostfixStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_postfixStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(java2pyParser.ID)
            self.state = 163
            localctx.op = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << java2pyParser.T__6) | (1 << java2pyParser.T__7) | (1 << java2pyParser.T__8) | (1 << java2pyParser.T__9))) != 0)):
                localctx.op = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << java2pyParser.T__2) | (1 << java2pyParser.T__20) | (1 << java2pyParser.T__23) | (1 << java2pyParser.STRING) | (1 << java2pyParser.TRUE) | (1 << java2pyParser.FALSE) | (1 << java2pyParser.NULL) | (1 << java2pyParser.ID) | (1 << java2pyParser.NUMBER) | (1 << java2pyParser.FLOAT))) != 0):
                self.state = 164
                self.exp()


            self.state = 167
            self.match(java2pyParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(java2pyParser.RETURN, 0)

        def exp(self):
            return self.getTypedRuleContext(java2pyParser.ExpContext,0)


        def getRuleIndex(self):
            return java2pyParser.RULE_returnStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = java2pyParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_returnStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(java2pyParser.RETURN)
            self.state = 170
            self.exp()
            self.state = 171
            self.match(java2pyParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'
